@@ -11,8 +11,6 @@ for 0.6
 
 - short cmdline options for common ``-O`` options
 
-- html formatter: full document, external css file?
-
 - improve guess_lexer heuristics (esp. for template langs)
 
 - more unit tests (pygmentize, all formatters)
